--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "bootstrap": "^4.5.0",
     "css-loader": "^3.6.0",
+    "html-webpack-plugin": "^4.3.0",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
