--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jquery": "^3.5.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "popper.js": "^1.16.1",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
